fixed overflow on mobile

--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -38,3 +38,6 @@ i.s-icons:hover
 .btn.btn-lg
   padding: 0.5rem 0.9rem
   font-size: 0.7rem
+
+#emailLink
+  font-size: 0.9rem
